microk8s/registry/svc-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  selector: 
    run: registry
  type: ClusterIP
  ports:
    - name: registry-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  externalIPs:
  - 172.23.161.55
