microk8s/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    #nginx.ingress.kubernetes.io/rewrite-target: '/'
  name: nginx-ingress
  namespace: docker-registry
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - localhost
    secretName: registry-cert
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry-service 
            port:
              number: 5000
